# saroupille.com

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  HACKING.md  README.md  dune-project
assets/: about.css  about.json  articles.json  configuration.json  dune  footer.json  index.html  news.json  software.json
assets/content/: 01-born.md  dune
deploy/: README.md  dune  main.ml
